@@ -118,3 +118,4 @@ v0.7.4
 v0.7.5
 
 * zapret-auto : orchestrator "repeater"
+* blockcheck2: check http3 with ipv6 exthdr
